0.close all threads after Test finish 1.test log write to files